fixed page stretching

--- a/styles/custom-order.css
+++ b/styles/custom-order.css
@@ -1,5 +1,10 @@
+html {
+}
+
 body {
 	margin: 0;
+	overflow: hidden;
+	position: relative;
 }
 
 main {
@@ -22,11 +27,15 @@ main > p {
 
 form {
 	margin: 1rem;
-	position: absolute;
-	top: 110px;
-	left: 150vw;
-	display: flex;
+	/* position: absolute;
+	top: 10rem;
+	left: 150vw; */
 	gap: 10px;
+	display: flex;
+	position: absolute;
+	top: 5rem;
+	right: 100vw;
+	/* right: 100vw; */
 }
 
 section {
@@ -36,10 +45,15 @@ section {
 	justify-content: center;
 	padding: 5px;
 	height: 50vh;
+	display: flex;
 	visibility: hidden;
-	transition: .3s;
-	transition-duration: 1s;
 	width: 80vw;
+	transition: 3s;
+	transition-duration: 1s;
+	/* transition: .3s;
+	transition-duration: 1s;
+	visibility: hidden;
+	width: 80vw; */
 }
 
 #formPageOne label,
